ruby2.5 (2.5.0~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate. Includes the following fixes:
    - Fix stack size on powerpc64 (Closes: #881772)
    - CVE-2017-17405: Command injection vulnerability in Net::FTP
      (Closes: #884437)
  * ruby2.5-dev: Recommends: ruby2.5-doc
  * debian/watch: download release tarballs.
    Using release tarballs makes it possible to build ruby without having an
    existing ruby. This should help bootstrapping ruby on new
    architectures. (Closes: #832022)
  * debian/copyright: exclude embedded copies of bundled gems and libffi

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 23 Dec 2017 21:59:33 -0200

ruby2.5 (2.5.0~preview1-1) unstable; urgency=medium

  [ Antonio Terceiro ]
  * New upstream version 2.5.0~preview1
  * debian/patches: import all of our remaining changes wrt upstream. All the
    changes to tests were transformed into exclude files under test/excludes/
  * ruby2.5-dev: don't install *.a files anymore; they are not installed by
    the upstream build system anymore.
  * debian/rules: adapt removal of embedded certificate store in Rubygems
  * debian/rules: also remove embedded certificate store from bundler

  [ Christian Hofstaedtler ]
  * Remove packaging for tcltk extension; it has been removed from Ruby core
    upstream.
  * Drop migration from old -dbg package
  * Disable test for homedir expansion which fails in sbuild
  * Upstream tarballs no longer come from git
  * Update jquery in missing-sources
  * d/copyright: Add info for darkfish icon set
  * Build with default OpenSSL once again

 -- Antonio Terceiro <terceiro@debian.org>  Tue, 10 Oct 2017 21:12:54 -0300

ruby2.3 (2.3.3-1) unstable; urgency=medium

  * New upstream version.

 -- Christian Hofstaedtler <zeha@debian.org>  Tue, 22 Nov 2016 12:32:41 +0000

ruby2.3 (2.3.2-1) unstable; urgency=medium

  * New upstream version.

 -- Christian Hofstaedtler <zeha@debian.org>  Wed, 16 Nov 2016 01:31:08 +0000
