@@ -13,7 +13,7 @@ Signed-off-by: Christian Hofstaedtler <zeha@debian.org>
  2 files changed, 3 insertions(+), 3 deletions(-)
 
 diff --git a/lib/rdoc/generator/json_index.rb b/lib/rdoc/generator/json_index.rb
-index ea9384e..3ad0152 100644
+index e4cfe96..bcf5b00 100644
 --- a/lib/rdoc/generator/json_index.rb
 +++ b/lib/rdoc/generator/json_index.rb
 @@ -175,7 +175,7 @@ def generate_gzipped
@@ -35,7 +35,7 @@ index ea9384e..3ad0152 100644
            gz.write data
            gz.close
 diff --git a/lib/rdoc/rdoc.rb b/lib/rdoc/rdoc.rb
-index adcb65b..f07dba1 100644
+index 68775c8..9cc583f 100644
 --- a/lib/rdoc/rdoc.rb
 +++ b/lib/rdoc/rdoc.rb
 @@ -315,7 +315,7 @@ def normalized_file_list(relative_files, force_doc = false,
